--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
       integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap"
       rel="stylesheet"
     />
 
